# rust_membership_api

./: .containerbuild.sh  .gitignore  Cargo.toml  DATABASE.md  DEPS.md  Dockerfile  Makefile  README.md  container.sh  docker-compose.override.yml  docker-compose.yml  env.sh  example.env
migrations/2018-02-17-233945_create_members/: up.sql
migrations/2018-02-18-083052_create_user/: up.sql
migrations/2018-02-19-202243_initial_migration/: down.sql  up.sql
src/: config.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs
src/db/: mod.rs  models.rs  schema.rs
src/service/: mod.rs
src/service/rest/: mod.rs  models.rs  result.rs  roles.rs  users.rs
src/web/: app.rs  members.rs  mod.rs  roles.rs  users.rs
tests/: rust_membership_api.rs
tests/web/: app.rs  mod.rs
