[package]
name = "rust_membership_api"
version = "0.1.0"
authors = ["Jeff May <jeff.n.may@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "*"
diesel = { version = "1.0", features = ["postgres"] }
r2d2 = "*"
r2d2-diesel = "*"
serde_derive = "*"
serde_json = "*"
serde = "*"
